--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+}
+
 body {
   font-size: 20px;
   line-height: 1.5;
@@ -12,6 +19,10 @@ body {
   padding: 0 15px;
 }
 
+.main {
+  flex-grow: 1;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -23,4 +34,10 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.btn {
+  color: #ffffff;
+  background-color: $orange-900;
+  border-radius: 6px;
 }
