--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -47,19 +47,19 @@
     font-size: 18px;
     line-height: 1.2;
     transition: all 0.3s;
-  }
 
-  &__link:hover {
-    color: $orange-900;
-  }
+    &:hover {
+      color: $orange-900;
+    }
 
-  &__link:focus {
-    outline: 2px solid rgba(255, 104, 56, 0.7);
-    border-radius: 5px;
-  }
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      border-radius: 5px;
+    }
 
-  &__link:active {
-    text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    &:active {
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    }
   }
 
   &__link--active {
@@ -71,29 +71,35 @@
   }
 
   &__icon-link {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 19px auto;
-    display: block;
     width: 44px;
     height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     transition: all 0.3s;
-  }
 
-  // &__icon-link:hover {
-  //   color: $orange-900;
-  // }
+    &:hover {
 
-  &__icon-link:focus {
-    outline: 2px solid rgba(255, 104, 56, 0.7);
-    border-radius: 5px;
-    background-color: rgba(255, 122, 80, 0.1);
-  }
+      background-color: #FF7A50;
+      border-radius: 5px;
 
-  &__icon-link:active {
-    background-color: rgba(255, 122, 80, 0.1);
-    border-radius: 5px;
+      path,
+      ellipse {
+        stroke: #ffffff;
+      }
+    }
+
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      border-radius: 5px;
+      background-color: rgba(255, 122, 80, 0.1);
+    }
+
+    &:active {
+      background-color: rgba(255, 122, 80, 0.1);
+      border-radius: 5px;
+    }
   }
 
   &__icon-num {
@@ -108,7 +114,238 @@
     right: 4px;
     border-radius: 50%;
     background-color: $orange-900;
+
+    &:hover {
+      color: #FF7A50;
+      background-color: #ffffff
+    }
   }
 }
+
+.footer {
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+  &__form {
+    line-height: 1.3;
+    max-width: 200px;
+  }
+
+  &__label {
+    margin: 30px 0 12px;
+  }
+
+  &__input {
+    padding: 13px 15px;
+    border: 1px solid $gray;
+    border-radius: 5px;
+    width: 100%;
+    font-size: 14px;
+    transition: all 0.3s;
+
+    &::placeholder {
+      color: $gray;
+      transition: all 0.3s;
+    }
+
+    &:hover::placeholder {
+      color: $darkBlue-900;
+    }
+
+    &:focus {
+      border-color: transparent;
+      outline: 2px solid $orange-900;
+    }
+  }
+
+  &__btn {
+    width: 100%;
+    height: 44px;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+
+    &-img {
+      margin-right: 20px;
+      display: block;
+    }
+
+    &:hover {
+      color: $orange-900;
+      background-color: #ffffff;
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+
+      path {
+        fill: $orange-900
+      }
+    }
+
+    &:focus {
+      color: $orange-900;
+      background-color: rgba(255, 122, 80, 0.1);
+      ;
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+
+      path {
+        fill: $orange-900
+      }
+    }
+
+    &:active {
+      color: $orange-900;
+      background-color: rgba(255, 122, 80, 0.1);
+
+      path {
+        fill: $orange-900
+      }
+    }
+  }
+
+  &__items {
+    font-size: 18px;
+    line-height: 1.3;
+    letter-spacing: 0.01em;
+  }
+
+  &__item {
+    letter-spacing: 0.8px;
+    margin-bottom: 20px;
+  }
+
+  &__link {
+    transition: all 0.3s;
+
+    &:hover {
+      color: $orange-900;
+    }
+
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      border-radius: 5px;
+    }
+
+    &:active {
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    }
+  }
+
+
+  &__address {
+    margin-bottom: 60px;
+  }
+
+  &__contacts {
+    margin-right: 64px;
+  }
+
+  &__contact {
+    font-size: 16px;
+    line-height: 2;
+    margin-bottom: 15px;
+  }
+
+  &__ref {
+    position: relative;
+    margin-left: 31px;
+    transition: all 0.3s;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      left: -31px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    &-location::before {
+      background-image: url("../images/icons/location.svg");
+    }
+
+    &-phone::before {
+      background-image: url("../images/icons/phone.svg");
+    }
+
+    &-email::before {
+      background-image: url("../images/icons/email.svg");
+    }
+
+    &:hover {
+      color: $orange-900;
+    }
+
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+      border-radius: 5px;
+    }
+
+    &:active {
+      text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
+    }
+  }
+
+  &__socials {
+    display: flex;
+  }
+
+  &__social {
+    background-color: $silver-200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 39px;
+    height: 39px;
+    margin-right: 13px;
+    border-radius: 50%;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: #FF7A50;
+
+      path {
+        fill: #ffffff;
+      }
+    }
+
+    &:focus {
+      background-color: rgba(255, 122, 80, 0.1);
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+    }
+
+    &:active {
+      background-color: rgba(255, 122, 80, 0.1);
+
+      path {
+        fill: #FF7A50
+      }
+    }
+  }
+
+  &__bottom {
+    border-top: 1px solid $gray;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__copy {
+    font-size: 14px;
+    line-height: 1;
+    padding: 30px 0;
+  }
+}
+
+
+
+
 
 @import 'media';
