--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -122,6 +122,42 @@
   }
 }
 
+.hero {
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 450px;
+  }
+
+  &__title {
+    text-transform: uppercase;
+    font-size: 66px;
+    line-height: 1.3;
+    @extend %rubik-500;
+    color: $darkBlue-900;
+    margin-bottom: 20px;
+  }
+
+  &__subtitle {
+    color: $orange-900;
+  }
+
+  &__text {
+    margin-bottom: 20px;
+  }
+
+  &__button {
+    font-size: 18px;
+    margin-right: 35px;
+  }
+}
+
 .footer {
 
   &__top {
@@ -164,8 +200,6 @@
 
   &__btn {
     width: 100%;
-    height: 44px;
-    font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -177,30 +211,18 @@
     }
 
     &:hover {
-      color: $orange-900;
-      background-color: #ffffff;
-      outline: 2px solid rgba(255, 104, 56, 0.7);
-
       path {
         fill: $orange-900
       }
     }
 
     &:focus {
-      color: $orange-900;
-      background-color: rgba(255, 122, 80, 0.1);
-      ;
-      outline: 2px solid rgba(255, 104, 56, 0.7);
-
       path {
         fill: $orange-900
       }
     }
 
     &:active {
-      color: $orange-900;
-      background-color: rgba(255, 122, 80, 0.1);
-
       path {
         fill: $orange-900
       }
@@ -343,6 +365,7 @@
     padding: 30px 0;
   }
 }
+
 
 
 
