--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -89,3 +89,10 @@ body {
     text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.5);
   }
 }
+
+.title {
+  font-size: 36px;
+  line-height: 1.3;
+  color: $darkBlue-900;
+  @extend %rubik-500;
+}
