--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -158,6 +158,121 @@
   }
 }
 
+.popular {
+  text-align: center;
+
+  &__title {
+    margin-bottom: 60px;
+  }
+
+  &__filters {
+    display: flex;
+    margin-bottom: 45px;
+  }
+
+  &__filter {
+    margin-right: 20px;
+  }
+
+  &__btn {
+    color: $darkBlue-900;
+    line-height: 1.3;
+    background-color: #ffffff;
+    outline: 1px solid $silver-200;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 22px 32px;
+    transition: all 0.3s;
+
+    path {
+      transition: all 0.3s;
+    }
+
+    &:hover {
+      color: $orange-900;
+      background-color: rgba(255, 122, 80, 0.1);
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+
+      path {
+        fill: $orange-900;
+      }
+    }
+
+    &:focus {
+      outline: 2px solid rgba(255, 104, 56, 0.7);
+    }
+
+    &:active {
+      box-shadow: inset 0px -5px 12px rgba(255, 104, 56, 0.2);
+    }
+  }
+
+  .mixitup-control-active {
+    color: #ffffff;
+    background-color: $orange-900;
+    outline: 2px solid $orange-900;
+  
+    path {
+      fill: #ffffff;
+    }
+  }
+
+  &__svg {
+    margin-right: 10px;
+  }
+}
+
+.food {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 30px;
+  margin-bottom: 60px;
+
+  &__item {
+    max-width: 210px;
+    width: 100%;
+    height: 300px;
+    background-color: #ffffff;
+    border: 1px solid $silver-200;
+    border-radius: 5px;
+    padding: 20px 15px;
+    transition: all 0.3s;
+
+    &:hover {
+      border: 1px solid $orange-900;
+    }
+  }
+
+  &__img {
+    margin: 0 auto;
+  }
+
+  &__desc,
+  &__price {
+    font-size: 15px;
+    color: $darkBlue-900;
+    margin-bottom: 10px;
+  }
+
+  &__desc {
+    line-height: 1.2;
+    min-height: 2.4em;
+  }
+
+  &__price {
+    line-height: 1.4;
+    @extend %rubik-500;
+    display: block;
+  }
+
+  &__btn {
+    padding: 7px 16px;
+  }
+
+}
+
 .footer {
 
   &__top {
@@ -204,6 +319,10 @@
     justify-content: center;
     align-items: center;
     transition: all 0.3s;
+
+    path {
+      transition: all 0.3s;
+    }
 
     &-img {
       margin-right: 20px;
@@ -330,6 +449,10 @@
     margin-right: 13px;
     border-radius: 50%;
     transition: all 0.3s;
+
+    path {
+      transition: all 0.3s;
+    }
 
     &:hover {
       background-color: #FF7A50;
